--- a/src/index.css
+++ b/src/index.css
@@ -182,6 +182,12 @@ nav a {
 /*-----------------------------------------------------------------*/
 /* button styles */
 
+.dsc-btn-container {
+  width: 100%;
+  display: grid;
+  grid-gap: 20px;
+}
+
 .dsc-btn-page-container {
   width: 100%;
   display: grid;
