--- a/src/index.css
+++ b/src/index.css
@@ -418,3 +418,10 @@ nav a {
   color: var(--dsc-color-font-primary);
   margin-bottom: 20px;
 }
+
+.dsc-dialog-btn-container {
+  width: 100%;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 20px;
+}
