Programando todo o fluxo de deletar um produto

--- a/src/index.css
+++ b/src/index.css
@@ -223,6 +223,10 @@ nav a {
   cursor: pointer;
 }
 
+.dsc-dialog-btn {
+  width: 100%;
+}
+
 /*-----------------------------------------------------------------*/
 /* form styles */
 
