Mostrando erro global no formulário de login

--- a/src/index.css
+++ b/src/index.css
@@ -285,6 +285,16 @@ nav a {
   display: none;
 }
 
+.dsc-form-global-error {
+  border: 1px solid var(--dsc-color-error);
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  padding: 5px 10px;
+  border-radius: 5px;
+  color: var(--dsc-color-error);
+}
+
 .dsc-select:invalid {
   color: var(--dsc-color-font-placeholder);
 }
